Add $HOME/.local/bin to PATH for pip installs

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -35,5 +35,7 @@ set -g @catppuccin_status_connect_separator "no"
 
 set -g @catppuccin_directory_text "#{pane_current_path}"
 
+set-option -g allow-rename off
+
 # Initialize plugin manager (this must be the last line)
 run '~/.tmux/plugins/tpm/tpm'
