--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -8,34 +8,30 @@ set -g set-clipboard on          # use system clipboard
 set -g history-limit 50000
 set -g status-position bottom
 set -g status-interval 2
+set -g automatic-rename off
 
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+
+run ~/.tmux/plugins/catppuccin/tmux/catppuccin.tmux
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+
+# set -g @catppuccin_window_current_text "#{window_name}"
+# set -g @catppuccin_window_text "#{window_name}"
+
+set -g @catppuccin_window_current_text " #{window_name}"
+set -g @catppuccin_window_text " #{window_name}"
+
+set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-
-set -g @catppuccin_status_modules_right "... cpu ..."
-
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
-
-set -g @catppuccin_status_modules_right "directory user host session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
-
-set-option -g allow-rename off
 
 # Initialize plugin manager (this must be the last line)
 run '~/.tmux/plugins/tpm/tpm'
