fix: no extra plugin for CPU and RAM

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,8 +23,8 @@ set -agF status-right "#{E:@catppuccin_status_cpu}"
 set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
-set -ag status-right "#[fg=#{@thm_teal}]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --averages-count 0 --mem-mode 2 --colors --powerline-left --interval 2)#[default]"
-
+set -ag status-right "#[bg=default] #[bg=#{@thm_flamingo}] MEM #{ram_percentage} "
+set -ag status-right "#[bg=default] #[bg=#{@thm_flamingo}] CPU #{cpu_percentage} "
 
 # set -g @catppuccin_window_current_text "#{window_name}"
 # set -g @catppuccin_window_text "#{window_name}"
@@ -34,7 +34,6 @@ set -g @catppuccin_window_text " #{window_name}"
 
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # Initialize plugin manager (this must be the last line)
 run '~/.tmux/plugins/tpm/tpm'
