feat: replace Vivaldi with Chrome

--- a/ubuntu/autostart_ff/chrome.desktop
+++ b/ubuntu/autostart_ff/chrome.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Name=Vivaldi
-Exec=/snap/bin/vivaldi.vivaldi-stable
+Name=Chrome
+Exec=google-chrome-stable
 Terminal=false
 X-GNOME-Autostart-enabled=true 
