feat: split Cursor CLI pane in tmuxinator config

--- a/tmuxinator/freefly.yml
+++ b/tmuxinator/freefly.yml
@@ -7,6 +7,9 @@ windows:
     panes:
         - Cursor CLI:
             - cursor-agent
+        - Terminal:
+            - clear
+            - toilet -f smblock  --metal "FREEFLY"
 - console:
     layout: even-vertical
     panes:
